Improved the UI on the home page. Fixed an error with header spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,14 @@ h3{
 	background: #0f2a48 url("../img/bnet-background-1920.3ooDe.jpg") no-repeat center 0 !important;
 }
 
+.navbar{
+    margin-bottom: 0px;
+}
+
+.searchPageContainer{
+    margin-top:20px;
+}
+
 pre code{
 	color: #00aeff;
 }
@@ -50,6 +58,52 @@ pre code{
 	margin: 0 auto;
 	margin-bottom: 20px;
 }
+.user-picture{
+    -webkit-box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
+    background-color: rgb(0, 0, 0);
+    background-position: 1px 1px;
+    background-repeat: no-repeat;
+    border-bottom-color: rgb(47, 48, 50);
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-image-outset: 0px;
+    border-image-repeat: stretch;
+    border-image-slice: 100%;
+    border-image-source: none;
+    border-image-width: 1;
+    border-left-color: rgb(67, 68, 69);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-right-color: rgb(67, 68, 69);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-top-color: rgb(177, 178, 180);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-top-style: solid;
+    border-top-width: 1px;
+    box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
+    color: rgb(255, 177, 0);
+    cursor: auto;
+    display: block;
+    float: left;
+    height: auto;
+    margin-right: 20px;
+    outline-color: rgb(255, 177, 0);
+    outline-style: none;
+    outline-width: 0px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding-bottom: 1px;
+    padding-left: 1px;
+    padding-right: 1px;
+    padding-top: 1px;
+    text-decoration: none solid rgb(255, 177, 0);
+    width: auto;
+}
+
 
 .avatar_size{
 	width: 32px;
@@ -244,6 +298,7 @@ p.page-footer-row{
     word-wrap: break-word;
     display: inline;
     margin-right: 8px;
+    cursor: pointer;
 }
 
 .tagCloudHolder{
@@ -294,3 +349,132 @@ p.page-footer-row{
     cursor: pointer;
     zoom: 1.3;
 }
+
+
+table.user-info td{
+    padding-right: 15px;
+
+}
+
+h2.profile-subheader{
+    margin-bottom: 15px;
+    font-size: 30px;
+    border-bottom: 1px solid #ccc;
+    height: 34px;
+    clear: both;
+}
+
+div.profile-panel{
+    width: 50%;
+}
+
+div.badge-panel{
+    width: 30%;
+    padding: 0;
+    margin-right: 3%;
+}
+
+p.badge-title{
+    font-weight: bolder;
+    margin: 0;
+}
+
+p.badge-description{
+    font-weight: normal;
+    margin: 0;
+}
+
+.timeline-icon{
+    -webkit-box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
+    background-color: rgb(0, 0, 0);
+    background-position: -129px -65px;
+    background-repeat: no-repeat;
+    border-bottom-color: rgb(47, 48, 50);
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-image-outset: 0px;
+    border-image-repeat: stretch;
+    border-image-slice: 100%;
+    border-image-source: none;
+    border-image-width: 1;
+    border-left-color: rgb(67, 68, 69);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-right-color: rgb(67, 68, 69);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-top-color: rgb(177, 178, 180);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-top-style: solid;
+    border-top-width: 1px;
+    box-shadow: rgb(0, 0, 0) 0px 0px 10px 0px;
+    color: rgb(255, 177, 0);
+    cursor: auto;
+    display: block;
+    float: left;
+    height: 16px;
+    margin-right: 12px;
+    outline-color: rgb(255, 177, 0);
+    outline-style: none;
+    outline-width: 0px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding-bottom: 1px;
+    padding-left: 1px;
+    padding-right: 1px;
+    padding-top: 1px;
+    text-decoration: none solid rgb(255, 177, 0);
+    zoom: 2;
+    width: 16px;
+}
+.icon-check{
+    background-position: -129px -65px;
+}
+
+.icon-question-mark{
+    background-position: -65px -225px;
+}
+
+.icon-badge{
+    background-position: -145px -17px;
+}
+
+.icon-comment{
+    background-position: -33px -33px;
+}
+
+.icon-eyeball{
+    background-position: -129px -241px;
+}
+
+.icon-pencil{
+    background-position: -17px -193px;
+}
+
+.timeline-text{
+    margin-left: 5%;
+    display: table-cell;
+    width: 100%;
+}
+
+.timeline-icon-container{
+    display: table-cell;
+    vertical-align: top;
+    margin-top: 10px; 
+    margin-left: 15px;
+}
+
+p.timeline-header{
+    font-weight: bolder;
+    margin: 0;
+}
+
+p.timeline-description{
+    font-weight: normal;
+    margin: 0;
+    line-height: normal;
+}
+
